@@ -1,5 +1,11 @@
 2020-04-03 Philipp Klaus Krause <pkk AT spth.de>
 
+	* support/regression/tests/mm-pnvi-ae-udi-pointer_from_int_disambiguation_2.c,
+	  support/regression/tests/mm-pnvi-ae-udi-pointer_from_int_disambiguation_2_xy.c:
+	  Fix bug #2991.
+
+2020-04-03 Philipp Klaus Krause <pkk AT spth.de>
+
 	* support/regression/tests/mm-pnvi-ae-udi-*:
 	  Memory model tests, RFE #672.
 
